--- a/res/layout/fragment_profile.xml
+++ b/res/layout/fragment_profile.xml
@@ -41,7 +41,10 @@
 
   	<RatingBar
   	    android:id="@+id/ratingBar1"
-  	    android:layout_width="wrap_content"
-  	    android:layout_height="wrap_content" />
+  	    style="@style/carddemo_myapps_main_inner_ratingbar"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:stepSize="1.0"/>
 	
 </LinearLayout>
