--- a/res/layout/carddemo_mycard_inner_content.xml
+++ b/res/layout/carddemo_mycard_inner_content.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_marginLeft="3dp"
               android:gravity="center_vertical"
-              android:layout_height="96dp">
+              android:layout_height="130dp">
 
     <TextView
         android:id="@+id/carddemo_myapps_main_inner_title"
@@ -19,6 +19,24 @@
        style="@style/carddemo_myapps_main_inner_secondarytitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    
+    <TextView
+        android:id="@+id/carddemo_myapps_main_inner_postal"
+        style="@style/carddemo_myapps_main_inner_secondarytitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/carddemo_myapps_main_inner_price"
+        style="@style/carddemo_myapps_main_inner_secondarytitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+     <TextView
+        android:id="@+id/carddemo_myapps_main_inner_user_name"
+        style="@style/carddemo_myapps_main_inner_secondarytitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    
+    
     
   <!--   <ImageView
    
