--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,10 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.hackaton.ihelp.MainActivity" >
 
-    <item
-        android:id="@+id/action_example"
-        android:showAsAction="withText|ifRoom"
-        android:title="@string/action_example"/>
+    <item android:id="@+id/action_search"
+          android:title="search"
+          android:icon="@drawable/ic_action_search"
+          android:showAsAction="collapseActionView|ifRoom"
+          android:actionViewClass="android.widget.SearchView" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
